--- a/package.json
+++ b/package.json
@@ -3,25 +3,68 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "@hookform/resolvers": "3.3.4",
+    "@radix-ui/react-accordion": "1.1.2",
+    "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-checkbox": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
+    "@radix-ui/react-slider": "1.1.2",
+    "@radix-ui/react-switch": "1.0.3",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-toast": "1.1.5",
+    "@radix-ui/react-tooltip": "1.0.7",
+    "@supabase/auth-helpers-nextjs": "0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.56.0",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.13",
+    "@types/node": "20.12.0",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
+    "@types/react-virtualized": "9.21.29",
+    "@types/uuid": "9.0.8",
+    "autoprefixer": "10.4.19",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "date-fns": "3.6.0",
+    "embla-carousel-react": "8.1.3",
+    "framer-motion": "11.2.0",
+    "lucide-react": "0.379.0",
+    "next": "14.2.0",
+    "next-themes": "0.3.0",
+    "postcss": "8.4.38",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
+    "react-dropzone": "14.2.3",
+    "react-hook-form": "7.51.0",
+    "react-hot-toast": "2.4.1",
+    "react-intersection-observer": "9.10.2",
+    "react-virtualized": "9.22.5",
+    "recharts": "2.12.0",
+    "sharp": "0.33.3",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss": "3.4.0",
+    "uuid": "9.0.1",
+    "zod": "3.23.0",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.0",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
