--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-next": "14.2.0",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.2"
   }
 }
