--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/auth-helpers-nextjs": "0.10.0",
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.56.0",
+    "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.13",
     "@types/node": "20.12.0",
@@ -38,6 +38,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "8.1.3",
     "framer-motion": "11.2.0",
     "lucide-react": "0.379.0",
