--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -35,15 +35,16 @@
     "@types/react-virtualized": "9.21.29",
     "@types/uuid": "9.0.8",
     "autoprefixer": "10.4.19",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "3.6.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "8.1.3",
     "framer-motion": "11.2.0",
-    "lucide-react": "0.379.0",
+    "lucide-react": "^0.379.0",
     "next": "14.2.0",
     "next-themes": "0.3.0",
+    "pg": "^8.16.3",
     "postcss": "8.4.38",
     "react": "18.3.0",
     "react-dom": "18.3.0",
@@ -54,7 +55,7 @@
     "react-virtualized": "9.22.5",
     "recharts": "2.12.0",
     "sharp": "0.33.3",
-    "tailwind-merge": "2.3.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.0",
     "uuid": "9.0.1",
     "zod": "3.23.0",
